# skillHub

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  seed.py
backend/app/core/: config.py  errors.py  pagination.py  responses.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  category.py  department.py  idempotency_key.py  refresh_token.py  review_action.py  skill.py  skill_department.py  skill_tag.py  tag.py  user.py
backend/app/repositories/: skill_repository.py
backend/app/routers/: auth.py  category.py  department.py  skill.py  skill_lifecycle.py  tag.py  user.py
backend/app/schemas/: auth.py  category.py  common.py  department.py  skill.py  tag.py  user.py
backend/app/services/: auth_service.py  category_service.py  department_service.py  review_service.py  skill_service.py  support.py  tag_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 1bad3d063e19_init_schema.py
backend/tests/: conftest.py  test_auth.py  test_cors.py  test_lifecycle.py  test_skills.py
docker/: .env.example  docker-compose.yml
docs/: api.md  discovery.md  implement.md  schema.md  spec.md
docs/prototypes/archive/: direction-1-marketplace.html  direction-3-editorial-directory.html
docs/prototypes/audit-v1/: audit-notes.md
docs/prototypes/version/: prototypes-v1.html  prototypes-v2.html
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  (+4 more)
(+31 files in other folders)
